gateway/apigatewayClass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: adydgateway
spec:
  controllerName: adyd.org/gateway-controller
