gateway/gatewaylogin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: login-gateway
spec:
  gatewayClassName: adydgateway
  listeners:
  - name: httplogin
    protocol: HTTPS
    port: 10001
