gateway/angularhttproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: angular-route
  labels:
    app: angular
spec:
  hostnames: 
  - "kubernetes.docker.internal"
  rules:
  - backendRefs:
    - name: angular-service
      port: 4200
