gateway/httpRouteLogin.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproutelogin
spec:
  parentRefs:
  - name: adydgateway
  hostnames:
  - "localhost"
  rules:
  - matches:
    - path:
        type: Exact
        value: /api/login
    backendRefs:
    - name: loginapi
      port: 10002
